Second drill done. Added a display function to render images to the DOM

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <input class ='go' type = 'text' value = 3 required>
     <button>Give me pups!</button>
   </form>
+  <h2>Look at these doggos!</h2>
+  <section class="results">
+    <!-- <img class="img-result" alt="images did not load"> -->
+  </section>
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <script type="text/javascript" src="/index.js"></script>  
